--- a/app/globals.css
+++ b/app/globals.css
@@ -2,26 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+.feature {
+  @apply relative col-span-1 flex flex-col gap-5 justify-center items-center px-7 py-14 after:absolute after:top-0 after:left-5 after:text-[#fdefd9] after:text-[100px] after:font-semibold;
+
+  box-shadow: rgba(0, 0, 0, 00.1) 0px 0px 10px 0px;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.main-btn {
+  @apply text-white hover:bg-secondary duration-300 w-fit py-2 px-4 rounded-full font-semibold;
 }
